# actions-test

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci-push.yml  dispatch-dockerbake.yml  dispatch-dockerbuild.yml  dispatch-rundocker.yml  reusable-cmake.yml  reusable-package-test.yml  test.yml
Source/: Source.sln
Source/Env/: Env.vcxproj  test.cpp
Source/Source/: Source.vcxproj  test.cpp
bootstrapper/BootstrapperUI/: BootstrapperUI.sln
bootstrapper/BootstrapperUI/BootstrapperUI/: BootstrapperUI.csproj  CustomBootstrapper.cs  MainView.xaml  MainView.xaml.cs  WixToolset.Mba.Host.config  WpfBaFactory.cs  packages.config
bootstrapper/BootstrapperUI/BootstrapperUI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
bootstrapper/BootstrapperUI/Bundle/: Bundle.wixproj  Bundle.wxs
docker/: Dockerfile
docker/bake/: Dockerfile  bake.hcl
docker/manual/: Dockerfile
ext/: CMakeLists.txt
ext/main/: CMakeLists.txt
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  lib.cc  lib.h  lib_sub.h
src/lib/dir/: lib_subdir.h
src/lib_test/: CMakeLists.txt  lib_test.cc
src/main/: CMakeLists.txt  main.cc
wix/: programdata.wxs
