set(CMAKE_INCLUDE_CURRENT_DIR_IN_INTERFACE ON)

add_library(lib STATIC lib.cc lib.h)
target_include_directories(lib
PUBLIC
$<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>
)

set_target_properties(lib PROPERTIES
  EXPORT_NAME Lib
  PUBLIC_HEADER lib.h
)

install(TARGETS lib
  EXPORT actions-test-export
  PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/dir
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
  FILES_MATCHING REGEX "^.*\.h$"
)

install(EXPORT actions-test-export FILE foo-config.cmake DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/lib EXPORT_LINK_INTERFACE_LIBRARIES)
# install(EXPORT ActionsTestConfig FILE ActionsTestConfig.cmake DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/lib NAMESPACE ActionsTest::)
